# discord_notif

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
discord_notif/: __init__.py  __main__.py  args.py  discord_notif.py  err.py
