[build-system]
requires = ["setuptools>=67", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

[project]
name = "discord_notif"
version = "0.2.5"
requires-python = ">=3.10"
dependencies = [
    "certifi==2022.12.7",
    "charset-normalizer==3.1.0",
    "discord-webhook==1.1.0",
    "idna==3.4",
    "sai_logging==0.2.1",
    "requests==2.28.2",
    "urllib3==1.26.15",
]

[project.scripts]
discord_notif = "discord_notif.__main__:main"

[project.urls]
index = "https://git.saizo.gay/api/packages/saizo/pypi/simple/"
git = "https://git.saizo/gay/saizo/discord_notif.git"
