[build-system]
requires = ["setuptools>=67", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

[project]
name = "discord_notif"
version = "0.2.5"
requires-python = ">=3.10"
dependencies = [
    "discord-webhook==1.1.0",
    "sai_logging==0.2.2",
]

[project.scripts]
discord_notif = "discord_notif.__main__:main"

[project.urls]
index = "https://git.saizo.gay/api/packages/saizo/pypi/simple/"
git = "https://git.saizo/gay/saizo/discord_notif.git"
