[metadata]
author = saizo
author_email = saizo@simplemail.is
home_page = https://git.saizo.gay/saizo/discord_notif
description = an importable/executable script for sending embedded discord messages via webhook
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent